--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,23 @@
 version: '3.8'
 
 services:
-
   mysql:
-    image: mysql:8
-    container_name: mysql-db
+    image: "mysql:8.0"
+    restart: always
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: eventsdb
+      MYSQL_DATABASE: eventsProject
       MYSQL_ALLOW_EMPTY_PASSWORD: yes
     networks:
       - backend
 
   springboot:
     image: mahdihemriti/eventsproject:latest
-    container_name: events-app
     depends_on:
       - mysql
     ports:
       - "8089:8089"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/eventsdb?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: ""
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SERVER_SERVLET_CONTEXT_PATH: /events
-      SERVER_PORT: 8089
     networks:
       - backend
 
